# auto-ml-research

./: README.md  chart_comparison.py  dual_runner.py  evolve.py  genetic_algorithm.py  genome.py  monitor.py  pdf_report.py  pipeline.py  prepare.py  problem.toml  program.md  pyproject.toml  report.py  report_combined.html  report_email_propensity.html  report_event_propensity.html  report_web_propensity.html  search_space.py
.github/workflows/: evolve-all-propensity.yml  evolve.yml  gpu-experiment.yml
docs/: architecture.dot
problems/: email_propensity.toml  event_propensity.toml  web_propensity.toml
